objects/tffa__Submission__c.object
<CustomObject>
    <fields>
        <fullName>tffa__NumberOfIndividuals__c</fullName>
        <description>Number of parties of type INDIVIDUAL in the submission.</description>
        <label>Number Of Individuals</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Type__c</field>
            <operation>equals</operation>
            <value>INDIVIDUAL</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfOrganizations__c</fullName>
        <description>Number of parties of type ORGANIZATION in the submission.</description>
        <label>Number Of Organizations</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Type__c</field>
            <operation>equals</operation>
            <value>ORGANIZATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfParties__c</fullName>
        <description>The number of parties on the submission</description>
        <label>Number Of Parties</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OpportunityId__c</fullName>
        <description>The opportunity ID in case this submission is integrated with a CRM sytstem.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OriginatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures details of the user/agent/company which originates current lending application. Applicable in mortgage applications and identified as MLO. A (MLO) mortgage loan originator (aka mortgage loan officer, loan officer, LO, etc.) is typically an individual who works with a borrower to complete a mortgage transaction. The mortgage loan originator/officer is usually the borrower&apos;s main point of contact throughout the entire home loan process</description>
        <label>Originated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OriginatedSubmissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__OriginatingAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures details of the agent which originates current application.</description>
        <label>Originating Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContactEmail__c</fullName>
        <description>The primary email of the primary contact (individual) in the application. For consumer and mortgage applications, the primary applicant is the primary contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContactId__c</fullName>
        <description>The unique identifier (Id) of the primary contact (individual) in the application. For consumer and mortgage applications, the primary applicant is the primary contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary contact id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContactName__c</fullName>
        <description>The name of the primary contact (individual) in the application. For consumer and mortgage applications, the primary applicant is the primary contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContactPhone__c</fullName>
        <description>The primary phone of the primary contact (individual) in the application. For consumer and mortgage applications, the primary applicant is the primary contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary contact phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionCode__c</fullName>
        <description>A promotion code which was part of a marketing campaign.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A promotion which was part of a marketing campaign.</description>
        <label>Promotion</label>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Referer__c</fullName>
        <description>The referrer of the original request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralCode__c</fullName>
        <description>The referral code that was applied on the submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral code (value)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The referral from which the submission originated.</description>
        <label>Referral</label>
        <referenceTo>tffa__Referral__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderCount__c</fullName>
        <description>Captures count of reminder emails sent</description>
        <label>Reminder count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderDate__c</fullName>
        <description>Captures next date on which reminder email will be sent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the submission was reopened. Useful in reporting.</description>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ReopeningComments__c</fullName>
        <description>Additional notes on why the submission was reopened. Contains instructions (or helpful comments) for the applicant from the banker. This generally gets inserted into the body of Reopened email sent to the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reopening comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current submission is secured by an existing security held by the applicant</description>
        <label>Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SessionExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether session is expired for the current submission</description>
        <label>Session expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SessionExpiresOn__c</fullName>
        <description>Datetime value on which session expires</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SessionExpiresOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__SessionToken__c</fullName>
        <description>Holds encrypted value of session token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Session token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source of the submission. This could be the online banking , Walk-in,Promotion</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <defaultValue>&quot;Init&quot;</defaultValue>
        <description>The current state/step of the Submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates current status of the submission</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmissionDate__c</fullName>
        <description>Date on which submission is submitted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission date(DEPRECATED)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who submits this submission</description>
        <label>SubmittedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedChannel__c</fullName>
        <description>Type of the channel from which the application has been originated. 

Supported values are - 

BRANCH
DIGITAL
CALLCENTER</description>
        <label>Submitted Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmittedOn__c</fullName>
        <description>Date and time on which submission was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Submitted__c</fullName>
        <description>Indicates whether the submission was submitted(status=SUBMITTED). Derived from submitted date.</description>
        <formula>NOT(ISNULL(tffa__SubmittedOn__c))</formula>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Theme__c</fullName>
        <description>The UX theme applied for this submission, useful for tracking, same value as UXStrategyCode__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UX Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TimeZone__c</fullName>
        <description>Timezone of the user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UXStrategyCode__c</fullName>
        <description>The UX strategy applied for this submission, useful for tracking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UX Strategy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UXStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A ux strategy for the submission</description>
        <label>UX Strategy</label>
        <referenceTo>tffa__UXStrategy__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__UrlFragment__c</fullName>
        <description>Fragment of URL (usually q parameter) in encrypted form that uniquely identifies the submission. May also be used as nonce for additional security.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL fragment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>URL to access current submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UserAgent__c</fullName>
        <description>In computing, a user agent is software (a software agent) that is acting on behalf of a user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>Applicant_Not_Present_Submissions</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>tffa__Brand__c</columns>
        <columns>CZApplicantsNotCompletedCount__c</columns>
        <columns>CZApplicantsNotPresentCount__c</columns>
        <columns>CZApplicantsNotPresentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CZApplicantsNotPresentCount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Applicant_Not_Present_Submissions</label>
    </listViews>
    <listViews>
        <fullName>Counter_offer</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__SubmissionDate__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>Counter-offer</label>
    </listViews>
    <listViews>
        <fullName>Cross_Sell</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__SubmissionDate__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HasCrossSellSelected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cross-Sell</label>
    </listViews>
    <listViews>
        <fullName>tffa__AbandonedSubmissions_Submission</fullName>
        <columns>NAME</columns>
        <columns>tffa__PrimaryContactName__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>ABANDONED</value>
        </filters>
        <label>Abandoned Submissions</label>
    </listViews>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__SubmissionDate__c</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <columns>FISBranchCode__c</columns>
        <columns>tffa__NumberOfParties__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__CancelledSubmissions_Submission</fullName>
        <columns>NAME</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>CANCELLED</value>
        </filters>
        <label>Cancelled Submissions</label>
    </listViews>
    <listViews>
        <fullName>tffa__ExpiredSubmissions_Submission</fullName>
        <columns>NAME</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>EXPIRED</value>
        </filters>
        <label>Expired Submissions</label>
    </listViews>
    <listViews>
        <fullName>tffa__SavedSubmissions_Submission</fullName>
        <columns>NAME</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>SAVED</value>
        </filters>
        <label>Saved Submissions</label>
    </listViews>
    <listViews>
        <fullName>tffa__SubmittedSubmissions_Submission</fullName>
        <columns>NAME</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PrimaryPartyName__c</columns>
        <columns>tffa__Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>SUBMITTED</value>
        </filters>
        <label>Submitted Submissions</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{0000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>